# salsa

./: .gitignore  Beef_Bulgogi.txt  Butter_Chicken.txt  Chicken_Tika_Masala.txt  Chicken_briyani.txt  Chipotle_Sauce.txt  Eggplant_with_tomato_sauce.txt  Fish_Curry1.txt  Garam_masala.txt  Homemade_Pasta_Kitchenaid.txt  Indian_butter_chicken.txt  Kalbi_Short_Beef_ribs.txt  Korean_BBQ_Pork_.txt  Korean_Pancake.txt  Lamb_briyani.txt  Makefile  Mango_mouse.txt  Pandan_Cake.txt  Potato_masala.txt  README.rst  Resep_Ayam_Bakar_Kalasan.txt  Tandoori_chicken.txt  Tofu_Soybean_paste_soup.txt  Tomato_pulao.txt  Veg_Briyani.txt  Veg_pulao.txt  dosa.txt  fruitcake.txt  pizza_dough.txt  pyproject.toml  rendang.txt
ATK/: Chick_Fill_A_Copy.txt  Corn_Bread_Stuffing_NYT.txt  Isi_Bun_BBQ.txt  Otak2.txt  Rempeyek_Tante_Bertha.txt  Risoles_Tante_Bertha.txt  Roasted_Cauliflower.txt  Sio_May.txt  Tahu-Baso-Resep-Tante-Bertha.txt  Vietnamese_Eggroll.txt  Vietnamese_Fish_Sauce.txt
Chef_Lau/: Chinese_Sticky_Rice.txt  General_Tso_Chicken.txt  Honey_Walnut_Shrimp.txt  Siu_Mai.txt  Steamed_Fish.txt  Steamed_Spare_Rib_with_Blck_Bean.txt
Magic_Ingredients/: Braised_Beef_ribs.txt  Croissant_Magic.txt  Fried_Chicken_Cutlets.txt  Invert_Sugar.txt  Margaritta_Pizza.txt  Mooncakes_White_Bean.txt  Mung_Bean_Pastries.txt  Onion_Ring_Fried_Squid.txt  Pan_Fried_Dumpling.txt  Pickled_Cucumber.txt  Potatoe_Wedges.txt  Sweet_Potato_Fries.txt  Sweet_Rice_Ball.txt  Sweet_Sour_Eggplant.txt  Swiss_Roll.txt
Mexican/: Baked_Chicken.txt  Beef_Enchiladas.txt  Beef_Stew.txt  Black_Bean_Corn_Salad.txt  (+21 more)
(+173 files in other folders)
